--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.show-sql=true
 
 # Filter PUT, PATCH, DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # Web Server
 server.port=8088
